--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body onload="newGame()">
-<div class="row">
+<div class="container">
   <div class="col-xs-6 col-md-4"></div>
   <div class="col-xs-12 col-md-4"><h1 align="left" class="header inline">2048</h1>  
   <div class="btndefault inline">
@@ -27,7 +27,7 @@
   </div>
  <br><br>
 
- <div id="division" class="container"></div>  
+ <div id="division"></div>  
  <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
