--- a/index.html
+++ b/index.html
@@ -9,10 +9,37 @@
 <script type="text/javascript" src="2048game_js.js"></script>
 
 </head>
-<body onload="newGame()">
+<body>
 <div class="container">
+
+   <div class="header text-center">2048</div>
+   <div class="row">
+     <div class="col-xs-3 col-md-3"></div>
+     <div class="col-xs-6 col-md-6">
+       <div class="col-xs-6 col-sm-6 col-md-6">
+       	<div class="newGame">
+       		<button id="mybtn" class="btn tryagain center">New Game</button>
+       	</div>
+       </div>
+	   <div class="col-xs-6 col-sm-6 col-md-6">
+  			<div class="score">
+  				<div class="col-xs-6 col-sm-6 col-md-6">
+  					<h5 class="textinside text-center">SCORE</h5>
+  				</div>
+  				<div class="col-xs-6 col-sm-6 col-md-6">
+				    <h5 class="textinside text-center" id="score">0</h5>
+			    </div>
+			</div>    
+  	   </div>
+   
+   
+   </div>
+   <div class="col-xs-3 col-md-3"></div>
+   </div>
+ <!-- For the grid -->
   <div class="col-xs-6 col-md-3"></div>
-  <div class="col-xs-12 col-md-8"><h1 align="left" class="header inline">2048</h1>  
+  <div class="col-xs-12 col-md-8">
+  <!--<h1 align="left" class="header inline">2048</h1>  
   <div class="btndefault inline">
   <h5 class="textinside" align="center">SCORE</h5>
   <p align="center" class="textinside" id="score">0</p>
@@ -25,24 +52,26 @@
   <div class="inline" align="right">
   <input type="Submit" class="btnrestart" onclick="newGame();" value="New Game"></input>
   </div>
- <br><br>
+ <br><br>-->
 
- <div id="division"></div>  
+ <div id="division"></div> 
  <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       
       <div class="modal-body">
-        <h4 class="gameover">Game Over!</h4>
+        <h4 class="gameover" id="gamedecision"></h4>
       </div>
-      <div class="modal-footer">        
-        <button type="button" class="btn tryagain" onclick="newGame()">Try Again</button>
+      <div class="modal-footer">  
+      <div><h4 class="scoredivtext" id="scorediv"></h4></div>      
+      <button type="button" class="btn tryagain" id="trybtn">Try Again</button>
       </div>
     </div>
   </div>
 </div>
  <div class="col-xs-6 col-md-1"></div>
+</div>
 </div>
 </body>
 </html>
