--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
    <div class="col-xs-3 col-md-3"></div>
    </div>
  <!-- For the grid -->
+ <div class="row">
   <div class="col-xs-6 col-md-3"></div>
-  <div class="col-xs-12 col-md-8">
+  <div class="col-xs-10 col-md-8">
   <!--<h1 align="left" class="header inline">2048</h1>  
   <div class="btndefault inline">
   <h5 class="textinside" align="center">SCORE</h5>
@@ -69,6 +70,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
  <div class="col-xs-6 col-md-1"></div>
 </div>
